--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
+  "printWidth": 80,
   "singleQuote": true,
-  "semi": true,
-  "htmlWhitespaceSensitivity": "ignore"
+  "trailingComma": "es5",
+  "htmlWhitespaceSensitivity": "ignore",
+  "semi": true
 }
