--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lint:fix": "eslint --fix --ext .js,.vue src"
+    "lint:fix": "eslint --fix --ext .js,.vue src",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -52,7 +53,18 @@
     },
     "rules": {
       "vue/multi-word-component-names": "off",
-      "@typescript-eslint/no-explicit-any": 0
+      "@typescript-eslint/no-explicit-any": 0,
+      "prettier/prettier": [
+        "error",
+        {
+          "singleQuote": true,
+          "semi": true,
+          "printWidth": 80,
+          "trailingComma": "es5",
+          "htmlWhitespaceSensitivity": "ignore",
+          "vueIndentScriptAndStyle": false
+        }
+      ]
     }
   },
   "browserslist": [
